<resources>
    <string name="app_name">Local Template</string>
    <string name="arito_app_name">Local Template</string>
    <string name="app_release_year">© 2022 Delfi Technologies</string>
    <string name="login">Đăng nhập</string>
    <string name="setting">Cài đặt</string>
    <string name="home_page">Trang chủ</string>
    <string name="main_label">Lựa chọn chức năng</string>
    <string name="menu_sync">Đồng bộ</string>
    <string name="feature_list">Danh mục giải pháp</string>
    <string name="feature_option">Chọn một giải pháp bên dưới để tiếp tục</string>
    <string name="quan_ly_ton_kho_option">Quản lý \ntồn kho (AX)</string>
    <string name="ax_server">AX Server</string>
    <string name="odoo_server">Odoo Server</string>
    <string name="printer_server">Printer Server</string>

    <string name="soan_hang_odoo_option">Soạn hàng (Odoo)</string>
    <string name="no_server_configuration">Chưa thiết lập</string>
    <string name="configure_server">Đã thiết lập</string>
    <string name="error_connect_feature_manager_title">Không thể kết nối</string>
    <string name="error_connect_feature_manager_message">Không thể kết nối với dữ liệu, vui lòng\nkiểm tra kết nối internet của bạn</string>
    <string name="manager_menu11_title">Nhập kho</string>
    <string name="manager_menu2_title">List - Printer</string>
    <string name="manager_menu12_title">Swipe List and Printer</string>
    <string name="manager_menu13_title">Expand/Collapse List</string>
    <string name="detail_product_input">Thông tin chi tiết sản phẩm</string>
    <string name="scanned_quantity">Đã quét</string>
    <string name="total_expected_quantity">Tổng số lượng quét</string>
    <string name="phone">Điện thoại</string>
    <string name="saved_error_title">Lỗi lưu dữ liệu</string>
    <string name="saved_error_message">Lỗi lưu dữ liệu, vui lòng kiểm tra lại.</string>
    <string name="update_processing_error_title">Lỗi cập nhật trạng thái</string>
    <string name="update_processing_error_message">Lỗi cập nhật trạng thái, vui lòng kiểm tra lại.</string>
    <string name="confirm_print_title">Xác nhận in tem</string>
    <string name="confirm_print_message">Bạn có muốn in tem này trước khi đồng bộ ?</string>
    <string name="print_title">In tem</string>
    <string name="next">Next</string>
    <string name="please_configure_server">Vui lòng hoàn tất cấu hình tới server để tiếp tục</string>
    <string name="completed_setting">Hoàn tất thiết lập</string>
    <string name="close_after_3s">Tự động đóng sau . . . <font color="#1e8fe1">3s</font></string>
    <string name="scan_barcode">Quét mã vạch</string>
    <string name="server_configuration">Thiết lập server</string>
    <string name="server_list">Danh sách server</string>
    <string name="product_code_title">Mã vật tư</string>
    <string name="user_name">Tên truy cập</string>
    <string name="password">Mật khẩu</string>
    <string name="ma_don">Mã đơn</string>
    <string name="product_code">Mã sản phẩm</string>
    <string name="receipt_id">Số chứng từ</string>
    <string name="quantity">Số lượng</string>
    <string name="receipt_code">Mã phiếu hàng</string>
    <string name="unit">Đơn vị tính</string>
    <string name="need_help">Need Help</string>
    <string name="header_need_for_help">ASK FOR HELP</string>
    <string name="do_you_need_to_help">Do you need any help, or having \n problems with the application?</string>
    <string name="do_not_hesitate">Do not hesitate to contact us</string>
    <string name="try_connect_button">Thử kết nối</string>
    <string name="login_error_title">Đăng nhập không thành công</string>
    <string name="login_ax_error_title">Đăng nhập AX không thành công</string>
    <string name="login_ax_error_message">Đăng nhập AX không thành công, vui lòng thử lại</string>

    <string name="email">Email</string>
    <string name="fri">(Fri)</string>
    <string name="back">Back</string>
    <string name="mon_thu">(Mon-Thu)</string>
    <string name="printer_ip">Địa chỉ IP</string>
    <string name="printer_port">Cổng giao tiếp</string>
    <string name="printer_settings">Thiết lập máy in</string>
    <string name="ask_for_printer_settings">Ứng dụng cần thiết lập cấu hình cho máy in tem. Bạn có muốn đi tới cấu hình ngay bây giờ?</string>
    <string name="please_choose_action">Vui lòng chọn thao tác</string>

    <string name="approve">Lưu</string>

    <string name="search_from_date">Tìm kiếm theo ngày</string>

    <string name="order_id">Số chứng từ</string>
    <string name="opening_house">Opening hours:</string>
    <string name="choose_device">Chọn thiêt bị</string>
    <string name="dien_giai">Diễn giải</string>
    <string name="config">Thiết lập</string>

    <string name="ma_vat_tu">Mã hàng</string>

    <string name="menu_printer_ip">Thiết lập máy in</string>
    <string name="error_invalid_ip">Địa chỉ ip không hợp lệ</string>
    <string name="login_error_content">Tài khoản đăng nhập hoặc mật khẩu không chính xác, vui lòng thử lại</string>

    <string name="qr_scan">Quét mã QR</string>
    <string name="please_scan_barcode">Vui lòng quét mã QR để hoàn tất\n thiết lập server</string>
    <string name="url_here">URL here</string>

    <string name="logout">Log Out</string>
    <string name="no_internet_title">Không có kết nối</string>
    <string name="no_internet_message">Vui lòng kết nối để tiếp tục sử dụng ứng dụng</string>
    <string name="configuration_title">Thiết lập cấu hình</string>
    <string name="configuration_message">Thông tin cấu hình không chính xác, vui lòng thiết lập lại để tiếp tục</string>
    <string name="coming_soon">Đang triển khai</string>
    <string name="request_data_server_error_title">Lỗi kết nối dữ liệu </string>
    <string name="request_data_server_error_msg">Không thể lấy dữ liệu từ máy chủ, vui lòng thử lại hoặc kiểm tra kết nối của bạn</string>
    <string name="sync_error_title">Lỗi đồng bộ</string>
    <string name="sync_error_msg">Không thể đồng bộ dữ liệu, vui lòng thử lại hoặc kiểm tra kết nối của bạn</string>
    <string name="sync_success_title">Đồng bộ thành công</string>
    <string name="sync_success_message">Dữ liệu đã được đồng bộ</string>
    <string name="btn_completed">Hoàn thành</string>
    <string name="confirm_inventory_title">Xác nhận đồng bộ</string>
    <string name="confirm_inventory_message">Bạn có chắc muốn hoàn tất phiếu này?</string>
    <string name="confirm_app_id_change">Bạn có muốn thay đổi mã kích hoạt?</string>
    <string name="str_continue">Tiếp tục</string>
    <string name="confirm_delete_single">Bạn có chắc chắn muốn xoá dòng đã chọn? %s</string>
    <string name="confirm_delete_multi">Bạn có chắc chắn muốn xoá nhiều dòng đã chọn? %s</string>
    <string name="empty_field">Không được để trống</string>
    <string name="input_again">Nhập lại</string>
    <string name="token_expired_title">Phiên làm việc đã hết hạn</string>
    <string name="token_expired_message">Cần đăng nhập lại để tiếp tục sử dụng</string>
    <string name="internal_error_title">Lỗi hệ thống</string>
    <string name="internal_error_message">Vui lòng thử lại</string>
    <string name="url_is_changed_message">Cấu hình URL đã bị thay đổi, ứng dụng sẽ được khởi động lại.</string>
    <string name="sync_title">Xác nhận đồng bộ</string>
    <string name="ftp_not_found_message">Vui lòng cài đặt cấu hình ftp server</string>
    <string name="logout_title">Đăng xuất</string>
    <string name="logout_message">Bạn có chắc chắn muốn thoát khỏi ứng dụng ?</string>
    <string name="settings_device_empty">Please enter Device ID</string>
    <string name="start">Bắt đầu</string>
    <string name="ma_phieu">Mã phiếu</string>
    <string name="location">Vị trí</string>
    <string name="menu2_2_title">Phiếu giao hàng</string>
    <string name="warehouse_code">Mã kho</string>
    <string name="pn_receipt_list">Danh sách phiếu nhập (%d)</string>
    <string name="px_receipt_list">Danh sách phiếu xuất (%d)</string>

    <string name="product_received_error_title">Lỗi lấy danh sách sản phẩm</string>
    <string name="product_received_error_message">Lỗi lấy danh sách sản phẩm, vui lòng kiểm tra lại. </string>
    <string name="ton_kho_error_title">Lỗi lấy danh sách tồn kho</string>
    <string name="ton_kho_error_message">Lỗi lấy danh sách tồn kho, vui lòng kiểm tra lại.</string>
    <string name="ton_kho_empty_error_title">Lỗi lấy danh sách tồn kho</string>
    <string name="ton_kho_empty_error_message">Kho không có danh sách tồn kho, vui lòng kiểm tra lại.</string>
    <string name="please_input_quantity">Vui lòng nhập số lượng</string>
    <string name="confirm_set_printer_ip_setting">\"Chưa cấu hình địa chỉ IP máy in. Bạn có muốn cấu hình không?\"</string>
    <string name="btn_complete">Hoàn tất</string>
    <string name="printer_setting_title">Cấu hình máy in</string>
    <string name="message_print_success">Đã in thành công.</string>
    <string name="print_success_title">In thành công</string>
    <string name="print_success_and_continue_title">In thành công</string>
    <string name="print_success_and_continue_message">Bạn có muốn tiếp tục in tem này hay đồng bộ ?</string>
    <string name="confirm">Xác nhận</string>
    <string name="product_list">Sản phẩm (%d)</string>
    <string name="retry">Thử lại</string>
    <string name="barcode_error_title">Mã vạch không hợp lệ</string>
    <string name="barcode_error_msg">Sản phẩm không có trong danh mục yêu cầu, vui lòng kiểm tra lại</string>
    <string name="enough_quantity_error_title">Số lượng không hợp lệ</string>
    <string name="enough_quantity_error_message">Yêu cầu xuất đã vượt quá số lượng sản phầm yêu cầu, vui lòng thử lại</string>
    <string name="need_enough_quantity_error_message">Yêu cầu lấy đủ sản phầm hiện trước khi đồng bộ, vui lòng thử lại</string>
    <string name="about_device">About Device</string>
    <string name="sync_data_api">Sync Data - API</string>
    <string name="sync_data_communication">Sync Data - Communication</string>
    <string name="app_setting">App Setting</string>
    <string name="confirm_delete_order_title">Xác nhận hủy đơn hàng</string>
    <string name="confirm_delete_order_message">Bạn có chắc muốn xác nhận hủy đơn hàng này ?</string>
    <string name="agree">Đồng ý</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="pick_up_later">Pick up later</string>
    <string name="get_receipt_11_error_message">Lỗi "%s"</string>
    <string name="please_wait">Vui lòng chờ...</string>
    <string name="no">Không</string>
    <string name="get_receipt_11_to_sync_error_message">Lỗi lấy dữ liệu đã lưu</string>
    <string name="error_printer_not_connected">"Kết nối không thành công! Vui lòng kiểm tra kết nối máy in. "</string>
    <string name="from_warehouse">Từ Kho</string>
    <string name="to_warehouse">Đến Kho</string>
    <string name="Item_number">Mã sản phẩm</string>

</resources>