<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_label_edit_record"
        android:orientation="vertical">
        <ImageView
            style="@style/DialogHeaderIcon"
            android:id="@+id/imageHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_1dp"
            app:srcCompat="@drawable/ic_delete_order_blue_circle_grey"
            android:contentDescription="@null" />
        <TextView
            style="@style/TextBlackBold16"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete_order_title"
            android:textStyle="bold"
            android:textColor="@color/light_black" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small">
            <TextView
                android:id="@+id/message"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_delete_order_message"
                style="@style/TextGrey14"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>
        </ScrollView>
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <RadioButton
                android:id="@+id/rbnOutOfStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingStart="@dimen/padding_small"
                android:text="@string/out_of_stock"/>
            <RadioButton
                android:id="@+id/rbnPickLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingStart="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_small"
                android:text="@string/pick_up_later"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_plus"
            android:layout_marginRight="@dimen/padding_plus"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/buttonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonTextBlue14"
                android:background="@drawable/bg_corner_border_blue"
                android:layout_marginEnd="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:layout_marginBottom="@dimen/padding_extra"
                android:layout_marginTop="@dimen/padding_extra"
                android:layout_gravity="center"
                android:text="@string/no"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:visibility="visible"/>
            <Button
                android:id="@+id/buttonYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonTextWhite14"
                android:background="@drawable/bg_corner_blue"
                android:layout_marginBottom="@dimen/padding_extra"
                android:layout_marginTop="@dimen/padding_extra"
                android:layout_gravity="center"
                android:text="@string/agree"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>