<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/lnHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:paddingHorizontal="@dimen/padding"
            android:paddingVertical="@dimen/padding"
            android:src="@drawable/ic_arrow_back_white_and_black" />
        <TextView
            style="@style/TextWhiteSemiBold16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/server_configuration" />
        <TextView
            style="@style/TextGreyRegular12"
            android:textColor="@color/bg_hesitate_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/please_configure_server"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnServers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_30sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnHeader">

        <TextView
            style="@style/TextGreyRegular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_list"
            android:layout_marginTop="@dimen/_6sdp"/>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrainAXServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/bg_white_corner_border_grey">

            <LinearLayout
                android:id="@+id/lnAXServer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_corner_grey_left"
                android:gravity="center_vertical"
                android:padding="@dimen/_2sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_server" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvAXTitle"
                style="@style/TextBlackSemiBold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ax_server"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginLeft="@dimen/padding"
                app:layout_constraintLeft_toRightOf="@id/lnAXServer"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvAXStatus"
                style="@style/TextGreyRegular10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_server_configuration"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/padding"
                app:layout_constraintLeft_toLeftOf="@id/tvAXTitle"
                app:layout_constraintTop_toBottomOf="@id/tvAXTitle" />
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrainOdooServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/bg_white_corner_border_green">

            <LinearLayout
                android:id="@+id/lnOdooServer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_corner_green_left"
                android:gravity="center_vertical"
                android:padding="@dimen/_2sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_server" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvOdooTitle"
                style="@style/TextBlackSemiBold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odoo_server"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginLeft="@dimen/padding"
                app:layout_constraintLeft_toRightOf="@id/lnOdooServer"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvOdooStatus"
                style="@style/TextGreyRegular10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_server"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/padding"
                app:layout_constraintLeft_toLeftOf="@id/tvOdooTitle"
                app:layout_constraintTop_toBottomOf="@id/tvOdooTitle" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrainPrinterServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/bg_white_corner_border_green">

            <LinearLayout
                android:id="@+id/lnPrinterServer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_corner_green_left"
                android:gravity="center_vertical"
                android:padding="@dimen/_2sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_server" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvPrinterTitle"
                style="@style/TextBlackSemiBold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printer_server"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginLeft="@dimen/padding"
                app:layout_constraintLeft_toRightOf="@id/lnPrinterServer"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvPrinterStatus"
                style="@style/TextGreyRegular10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_server"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/padding"
                app:layout_constraintLeft_toLeftOf="@id/tvPrinterTitle"
                app:layout_constraintTop_toBottomOf="@id/tvPrinterTitle" />
        </android.support.constraint.ConstraintLayout>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonTextWhite14"
            android:background="@drawable/bg_corner_blue"
            android:layout_margin="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/lnServers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAllCaps="false"
            android:text="@string/next"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCreatedYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_release_year"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/padding"/>
    <include
        layout="@layout/layout_server_configuration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>