<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnScanBarcode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_transparent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_white_top"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TextBlackSemiBold16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/qr_scan" />
            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"/>


        </android.support.constraint.ConstraintLayout>

        <TextView
            style="@style/TextGreyRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/please_scan_barcode"
            android:textColor="#7c8598" />

        <EditText
            android:id="@+id/tvURLText"
            style="@style/Text_Regular_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/url_here"
            android:padding="@dimen/padding"
            android:layout_marginHorizontal="@dimen/padding"
            android:layout_marginVertical="@dimen/_10sdp"
            android:enabled="false"
            android:background="@drawable/bg_white_corner_border_grey"/>


        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_50sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/_18sdp"
            >
            <FrameLayout
                android:id="@+id/cameraFrameView"
                android:layout_width="236dp"
                android:layout_height="224dp"
                android:background="@drawable/bg_corner_grey"
                app:layout_constraintLeft_toLeftOf="@id/imgBarcode"
                app:layout_constraintTop_toTopOf="@id/imgBarcode"
                android:visibility="invisible"
                />
            <ImageView
                android:id="@+id/imgBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_qr_scan"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:visibility="visible"/>

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
